name:           syb
version:        0.1.0.2
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
synopsis:       Scrap Your Boilerplate
description:
    This package contains the generics system described in the
    /Scrap Your Boilerplate/ papers (see <http://www.cs.vu.nl/boilerplate/>).
    It defines the @Data@ class of types permitting folding and unfolding
    of constructor applications, instances of this class for primitive
    types, and a variety of traversals.
cabal-version:  >=1.2.3
build-type: Simple

Library {
    build-depends: base >= 4.1 && < 4.3
    Extensions: CPP, Rank2Types, ScopedTypeVariables
    exposed-modules:
            Data.Generics
            Data.Generics.Aliases
            Data.Generics.Basics
            Data.Generics.Instances
            Data.Generics.Schemes
            Data.Generics.Text
            Data.Generics.Twins

    if impl(ghc < 6.10) 
       -- PatternSignatures was deprecated in 6.10
       extensions: PatternSignatures
}
